# codec_silk

./: CMakeLists.txt  README.markdown  codec_silk.c  codec_silk.kdev4  ex_silk.h
CMakeModules/: Findasterisk.cmake
silk/: CMakeLists.txt
